# CryptoApp

./: .dockerignore  .env.example  .gitignore  .gitignore-vm  AUTOSHUTDOWN_CHANGES.md  AUTO_SHUTDOWN.md  AZURE_COST_OPTIMIZATION.md  AZURE_DEPLOYMENT.md  CLAUDE.md  CLEANUP_CANDIDATES.md  CLEANUP_REPORT.md  DASHBOARD_IMPROVEMENTS.md  DEPLOYMENT.md  DEVELOPMENT_GUIDE.md  Dockerfile  FINAL_CLEANUP_REPORT.md  Features_to_change_or_check.md  Procfile  README.md  app.py  app.yaml  auto_refresh.py  azure_cost_control.sh  cost_config.py  crypto_display.py  crypto_visualizer.py  deploy_azure.sh  deploy_azure_rhel.sh  docker-compose.yml  extensions.py  favorites.json  gunicorn.conf.py  live_api.json  live_data_fetcher.py  main.py  pyproject.toml  refresh_data.py  requirements-ml.txt  requirements.txt  restart.sh  (+5 more)
.claude/: settings.json
.github/: copilot-instructions.md
azure_functions/: host.json  requirements.txt
config/: ml_config.py
data/: exchange_pairs_cache.json  favorites.json  gem_score_history.jsonl  live_api.json
deploy/: SSL-DEPLOYMENT-RHEL.md  cryptoapp-claude-agent.service  cryptoapp-claude-agent.timer  cryptoapp-docs.service  cryptoapp-docs.timer  cryptoapp-security.service  cryptoapp-security.timer  cryptoapp.service  deploy.sh  install-hooks.sh  nginx-cryptoapp.conf  pre-commit  security-check.sh  setup-ssl-rhel.sh
docs/: ADVANCED_ML_STRATEGY.md  API.md  ARCHITECTURE.md  Claude.md  Current_Work.md  DEPLOYMENT.md  DEVELOPMENT_GUIDE.md  Future_Work.md  GUIDE.md  ML.md  ML_SYSTEM_COMPLETE.md  MODELS.md  Planning.md  README.md  RL_SUCCESS_FAILURE_DETECTION.md  SETUP.md  To Do.md
documentation/: README.md
ml/: DEEPSEEK_README.md  README.md  advanced_alpha_features.py  agent_config.py  agent_memory.py  backtesting.py  claude_agent_runner.py  data_pipeline.py  deepseek_analyzer.py  doc_updater.py  enhanced_gem_detector.py  error_handling.py  exchange_manager.py  gem_score_tracker.py  market_monitor.py  monitoring.py  onnx_inference.py  orchestrator_wrapper.py  portfolio_manager.py  portfolio_tracker.py  q_learning.py  reinforcement_learning_engine.py  requirements.txt  rl_integration.py  scan_loop.py  scheduler.py  simple_rl.py  (+4 more)
(+119 files in other folders)
