[project]
name = "cryptoapp"
version = "0.1.0"
description = "Cryptocurrency Analysis and Investment Recommendation Tool"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31.0",
    "flask>=2.3.0",
    "flask-cors>=4.0.0",
    "flask-limiter>=3.5.0",
    "python-dotenv>=1.0.0",
    "scikit-learn>=1.6.1",
    "pandas>=2.3.3",
    "numpy>=2.0.2",
    "joblib>=1.5.2",
    "onnx>=1.19.1",
    "skl2onnx>=1.19.1",
    "onnxruntime>=1.18.0",
    "scipy>=1.13.1",
    "aiohttp>=3.13.2",
    "gunicorn>=21.2",
    "google-generativeai>=0.8.0",
    "google-genai>=1.61.0",
    "google-adk>=1.23.0",
    "psutil>=5.9.0",
    "ccxt>=4.0.0",
    "itsdangerous>=2.1.0",
]

[project.optional-dependencies]
rl = [
    "torch>=1.12.0",
    "torchvision>=0.13.0",
    "networkx>=2.8.0",
]
dev = [
    "pytest>=6.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "pip-audit>=2.7.0",
]

[dependency-groups]
dev = [
    "flake8>=7.3.0",
]
